--- a/Web.config
+++ b/Web.config
@@ -6,39 +6,25 @@
 
   </connectionStrings>
   <appSettings>
-    <!--Test UAT API
-	  <add key="navSalesAPI.navSalesAPI" value="http://gra-db-007:7347/UAT/WS/Equibrand%20Products%20Group/Codeunit/navSalesAPI"/>
-	  <add key="navSalesOrder.navSalesOrder" value="http://gra-db-007:7347/UAT/WS/Equibrand%20Products%20Group/Page/navSalesOrder"/> -->
-    <!--<add key="SalesAPI.navSalesAPI" value="http://gra-bc14:7347/UAT/WS/Equibrand Products Group/Codeunit/navSalesAPI"/>
-    <add key="SalesOrder.navSalesOrder" value="http://gra-bc14:7347/UAT/WS/Equibrand Products Group/Page/navSalesOrder"/>-->
+
+    <!--<add key="SalesAPI.navSalesAPI" value=""/>
+    	<add key="SalesOrder.navSalesOrder" value=""/>-->
 
      
-    <!--LIVE API-->
-      <add key="SalesAPI.navSalesAPI" value="http://gra-bc14:7047/BC14/WS/Equibrand Products Group/Codeunit/navSalesAPI"/>
-      <add key="SalesOrder.navSalesOrder" value="http://gra-bc14:7047/BC14/WS/Equibrand Products Group/Page/navSalesOrder"/>
 
     <!--LIVE NAV API
 
-    <add key="SalesAPI.navSalesAPI" value="http://gra-nav:7347/DynamicsNAV80/WS/Equibrand Products Group/Codeunit/navSalesAPI"/>
-    <add key="SalesOrder.navSalesOrder" value="http://gra-nav:7347/DynamicsNAV80/WS/Equibrand Products Group/Page/navSalesOrder"/>-->
+    <add key=""/>
+    <add key=""/>-->
     
-    <add key="MailServer" value="DAL-SMTP1.CLASSIC"/>
-    <add key="MailUsername" value="classic\webmail"/>
+
     <add key="MailPassword" value="9Cl@ss1c!#"/>
     <add key="SiteName" value=""/>
     <add key="EnableErrorLogEmail" value="true"/>
-    <add key="MailFrom" value="jdjohnson@equibrand.com"/>
-    <add key="CustomerServiceEmail" value="customerservice@equibrand.com"/>
-    <add key="OrderProcessorEmail" value="mstone@equibrand.com"/>
-    <add key="ErrorLogEmail" value="lgarza@equibrand.com"/>
-    <add key="SupplierEmail" value="jdjohnson@equibrand.com"/>
+
     <add key="Shopping_Button" value="true"/>
     <add key="ShoppingCartSaveDays" value="5"/>
-    <add key="LogInDays" value="1"/>
-    <!--<add key="CustomerMessages" value="assistance@jimedwardsbits.com" />-->
-    <add key="CustomerMessages" value="mstone@equibrand.com"/>
-    <!--<add key="EmailTemplates" value="C:\Home\Jim Edwards\Emails\" />-->
-    <add key="EmailTemplates" value="C:\Home\JimEdwards Site\Emails\"/>
+
    
   </appSettings>
   <!--
